

public static class Tags
{
    public const string Player = "Player";

    public const string Water = "Water";

    public const string Enemy = "Enemy";

}

public static class AnimParam
{
    public const string swim = "swim";
    public const string idle = "idle";
    public const string die = "die";
    public const string dive = "dive";
    public const string standUp = "standUp";
}